--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 使用 const date = new Date(); formatDate(date, 'YYYY-MM-DD', 'zh-Hant-TW'); // YYYY-10-DD ISO格式部分無法 formatDate(date, 'mm:ss', 'zh-Hant-TW'); // 57:09 formatDate(date, 'yyyy-MM-dd', 'zh-Hant-TW'); // 2020-10-24 formatDate(date, 'shortTime', 'zh-Hant-TW'); // 下午1:57 那Angular的時間格式就是Date Pipe的文件囉！ https://angular.io/api/common/DatePipe
 const date = new Date(); formatDate(date, 'full', 'zh-Hant-TW', '+0400'); // 2020年10月24日 星期六 上午10:16:54 [GMT+04:00] formatDate(date, 'full', 'zh-Hant-TW'); // 2020年10月24日 星期六 下午2:16:54 [GMT+08:00] 時區 調整時區也就 i18n 時間格式不外乎就是跟地區性有關，Angular已經具備i18n相關功能，其實formatDate也是位於i18n範圍內。預設Angular有en_US這locale。...</p>
 </section>
-<footer class=entry-footer><span title="2022-02-11 00:44:36 +0800 CST">February 11, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
+<footer class=entry-footer><span title="2022-02-11 00:44:36 +0800 +0800">February 11, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
 <a class=entry-link aria-label="post link to My First Post" href=https://examplesite.com/posts/my-first-post/></a>
 </article>
 </main>
