deploy: unnhao/hao-blog@f884324c005827e44e4c3cce704b7225eec2fc34

--- a/index.html
+++ b/index.html
@@ -79,18 +79,14 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
-<h2>Graphql 基本安裝與使用
+<h2>GraphQL 基本安裝與使用
 </h2>
 </header>
 <section class=entry-content>
-<p>概述 建構基本 Graphql 專案，單純筆記初始化流程與大致使用流程。
-安裝 初始化 npm 專案
-npm init -y 安裝相依套件
-apollo-server Apollo 伺服器的核心 graphql 用於建構 GraphQL Schema 和 執行 Query npm install apollo-server graphql touch index.js 定義 GraphQL Schema 定義 Query與 Mutation，驚嘆號為不為 null
-const typeDefs = gql` type Book { title: String author: String } type Query { books: [Book]! } input newBookInput { title: String! author: String! } type Mutation { newBook(input: newBookInput!): Book! } `; 定義資料 此處定義假資料，一般為 DB 連結，或是其他連線。...</p>
+<p>筆記 GraphQL 基本安裝與使用</p>
 </section>
 <footer class=entry-footer><span title="2022-02-28 22:16:21 +0800 +0800">February 28, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
-<a class=entry-link aria-label="post link to Graphql 基本安裝與使用" href=https://unnhao.github.io/posts/graphql-basic-usage/></a>
+<a class=entry-link aria-label="post link to GraphQL 基本安裝與使用" href=https://unnhao.github.io/posts/graphql-basic-usage/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
