--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Truffle 部屬 Kovan
+</h2>
+</header>
+<section class=entry-content>
+<p>Truffle 部屬合約至 Kovan 網路</p>
+</section>
+<footer class=entry-footer><span title="2022-03-13 16:58:02 +0800 +0800">March 13, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
+<a class=entry-link aria-label="post link to Truffle 部屬 Kovan" href=https://unnhao.github.io/posts/truffle-deploy-kovan/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>GraphQL 基本安裝與使用
 </h2>
 </header>
