deploy: unnhao/hao-blog@85d40fdd6f70fc552d1a875ac32f798032a6001a

--- a/404.html
+++ b/404.html
@@ -55,6 +55,11 @@
 <span>tags</span>
 </a>
 </li>
+<li>
+<a href=https://unnhao.github.io/projects/ title=projects>
+<span>projects</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
